--- a/taskTracker/index.html
+++ b/taskTracker/index.html
@@ -20,6 +20,6 @@
         </form>        
         <div id="task-list"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
